Add installation for header files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,10 +25,12 @@ find_package(nlohmann_json REQUIRED)
 
 add_subdirectory(src)
 
-install(TARGETS nam
-	EXPORT namTargets
-	LIBRARY DESTINATION lib
-	INCLUDES DESTINATION include)
+install(TARGETS nam LIBRARY DESTINATION lib)
+install(FILES "${PROJECT_BINARY_DIR}/include/version.h" DESTINATION include)
+
+file(GLOB HEADER_FILES "include/*.h")
+
+install(FILES "${HEADER_FILES}" DESTINATION include)
 
 include(CMakePackageConfigHelpers)
 write_basic_package_version_file(
