Reformat main CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,17 +10,17 @@ set(CMAKE_CXX_STANDARD_REQUIRED OFF)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 if (CMAKE_CXX_COMPILER clang++)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
 endif()
 
 if (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
-	include_directories(SYSTEM /usr/local/include)
+  include_directories(SYSTEM /usr/local/include)
 elseif (CMAKE_SYSTEM_NAME STREQUAL "Linux")
-	link_libraries(stdc++fs)
+  link_libraries(stdc++fs)
 elseif (CMAKE_SYSTEM_NAME STREQUAL "Windows")
-	add_compile_definitions(NOMINMAX WIN32_LEAN_AND_MEAN)
+  add_compile_definitions(NOMINMAX WIN32_LEAN_AND_MEAN)
 else()
-	message(FATAL_ERROR "Unrecognized Platform!")
+  message(FATAL_ERROR "Unrecognized Platform!")
 endif()
 
 find_package(Eigen3 REQUIRED)
@@ -37,25 +37,26 @@ install(FILES ${HEADER_FILES} DESTINATION include)
 
 include(CMakePackageConfigHelpers)
 write_basic_package_version_file(
-	${PROJECT_BINARY_DIR}/cmake/namVersion.cmake
-	VERSION ${PROJECT_VERSION}
-	COMPATIBILITY AnyNewerVersion)
+  ${PROJECT_BINARY_DIR}/cmake/namVersion.cmake
+  VERSION ${PROJECT_VERSION}
+  COMPATIBILITY AnyNewerVersion)
 
 export(EXPORT namTargets FILE ${PROJECT_BINARY_DIR}/cmake/namTargets.cmake)
 
-configure_file(${PROJECT_SOURCE_DIR}/cmake/namTargets.cmake.in
-	${PROJECT_BINARY_DIR}/cmake/namTargets.cmake
-	COPYONLY)
+configure_file(cmake/namTargets.cmake.in cmake/namTargets.cmake COPYONLY)
 
-configure_package_config_file(${PROJECT_SOURCE_DIR}/cmake/namConfig.cmake.in
-	${PROJECT_BINARY_DIR}/cmake/namConfig.cmake
-	INSTALL_DESTINATION cmake)
+configure_package_config_file(
+  ${PROJECT_SOURCE_DIR}/cmake/namConfig.cmake.in
+  ${PROJECT_BINARY_DIR}/cmake/namConfig.cmake
+  INSTALL_DESTINATION cmake)
 
-install(EXPORT namTargets
-	FILE ${PROJECT_BINARY_DIR}/cmake/namTargets.cmake
-	DESTINATION cmake)
+install(
+  EXPORT namTargets
+  FILE ${PROJECT_BINARY_DIR}/cmake/namTargets.cmake
+  DESTINATION cmake)
 
-install(FILES
-	${PROJECT_BINARY_DIR}/cmake/namConfig.cmake
-	${PROJECT_BINARY_DIR}/cmake/namVersion.cmake
-	DESTINATION cmake)
+install(
+  FILES
+    ${PROJECT_BINARY_DIR}/cmake/namConfig.cmake
+    ${PROJECT_BINARY_DIR}/cmake/namVersion.cmake
+  DESTINATION cmake)
