--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,22 +1,21 @@
-file(GLOB HEADER_LIST CONFIGURE_DEPENDS "${PROJECT_SOURCE_DIR}/include/*.h")
-
 add_library(nam SHARED
-	PRIVATE
-		activations.cpp
-		convnet.cpp
-		dsp.cpp
-		get_dsp.cpp
-		lstm.cpp
-		util.cpp
-		wavenet.cpp
-	PUBLIC
-		${HEADER_LIST})
+    activations.cpp
+    convnet.cpp
+    dsp.cpp
+    get_dsp.cpp
+    lstm.cpp
+    util.cpp
+    wavenet.cpp
+)
 
-target_include_directories(nam PUBLIC ../include)
+target_link_libraries(nam
+  PRIVATE
+    Eigen3::Eigen
+    nlohmann_json::nlohmann_json
+  )
 
-target_link_libraries(nam PRIVATE Eigen3::Eigen nlohmann_json::nlohmann_json)
+target_include_directories(nam PUBLIC
+  $<BUILD_INTERFACE:${INCLUDE_DIR}>
+  $<INSTALL_INTERFACE:include/nam>
+)
 
-source_group(
-	TREE "${PROJECT_SOURCE_DIR}/include"
-	PREFIX "Header Files"
-	FILES ${HEADER_LIST})
