--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,23 +1,29 @@
-set(INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
-
-set(HEADER_FILES
-  ${INCLUDE_DIR}/activations.h
-  ${INCLUDE_DIR}/convnet.h
-  ${INCLUDE_DIR}/dsp.h
-  ${INCLUDE_DIR}/lstm.h
-  ${INCLUDE_DIR}/util.h
-  ${INCLUDE_DIR}/wavenet.h
-)
-
 configure_file(
   "version.h.in"
   "version.h"
 )
 
-set(INCLUDE_DIR ${INCLUDE_DIR} PARENT_SCOPE)
-
-set(HEADER_FILES
-  ${HEADER_FILES}
-  ${CMAKE_CURRENT_BINARY_DIR}/version.h
-  PARENT_SCOPE
+target_sources(core PUBLIC
+  FILE_SET core_configured_headers
+  TYPE HEADERS
+  BASE_DIRS ${CMAKE_CURRENT_BINARY_DIR}
+  FILES ${CMAKE_CURRENT_BINARY_DIR}/version.h
 )
+
+target_sources(core PUBLIC
+  FILE_SET core_headers
+  TYPE HEADERS
+  FILES
+    activations.h
+    convnet.h
+    dsp.h
+    lstm.h
+    util.h
+    wavenet.h
+)
+
+target_include_directories(core PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+  $<INSTALL_INTERFACE:include/nam>
+)
+
