--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -3,14 +3,14 @@ configure_file(
   "version.h"
 )
 
-target_sources(core PUBLIC
+target_sources(namcore PUBLIC
   FILE_SET core_configured_headers
   TYPE HEADERS
   BASE_DIRS ${CMAKE_CURRENT_BINARY_DIR}
   FILES ${CMAKE_CURRENT_BINARY_DIR}/version.h
 )
 
-target_sources(core PUBLIC
+target_sources(namcore PUBLIC
   FILE_SET core_headers
   TYPE HEADERS
   FILES
@@ -22,7 +22,7 @@ target_sources(core PUBLIC
     wavenet.h
 )
 
-target_include_directories(core PUBLIC
+target_include_directories(namcore PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
   $<INSTALL_INTERFACE:include/nam>
 )
